darkmatter/lib/tests/snapshots/horizontal_rule_snapshots__tests__terminal_custom_color.snap
---
source: darkmatter/lib/tests/horizontal_rule_snapshots.rs
expression: result
---
[31m················································································[39m

[0m
