darkmatter/lib/tests/snapshots/horizontal_rule_snapshots__tests__terminal_simple_inset_line.snap
---
source: darkmatter/lib/tests/horizontal_rule_snapshots.rs
expression: result
---
  ────────────────────────────────────────────────────────────────────────────
