darkmatter/lib/tests/snapshots/horizontal_rule_snapshots__tests__terminal_thin_dots.snap
---
source: darkmatter/lib/tests/horizontal_rule_snapshots.rs
expression: result
---
················································································

[0m
